# virtual-cv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Procfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
.circleci/: config.yml
config.d/: auth.cfg  cv.cfg  locales.cfg  privacy.cfg  secret.cfg  server.cfg  watson.cfg
containers/: Dockerfile
containers/docker/: Dockerfile  docker-compose.yml
requirements/: prod.txt
site/: main.py
test/: __init__.py
test/common/: __init__.py  test_assets.py  test_locales.py  test_settings.py
webapp/: __init__.py  assets.py  callbacks.py  cli.py  common.py  csp.py  exceptions.py  locales.py  logger.py  settings.py  webapp.py
webapp/assets/src/: auth.js  errors.js  home.js  privacy.js  tac.js
webapp/assets/src/css/: auth.css  errors.css  home.css  privacy.css  tac.css
webapp/assets/src/js/: auth.js  home.js
webapp/blueprint/: __init__.py  api.py  favicon.py
webapp/blueprint/auth/: __init__.py
webapp/blueprint/auth/backend/: __init__.py  api.py  (+2 more)
webapp/blueprint/cv/: __init__.py
webapp/blueprint/errors/: __init__.py
webapp/blueprint/home/: __init__.py
webapp/blueprint/privacy/: __init__.py
webapp/blueprint/tac/: __init__.py
webapp/templates/auth/: common.html  form.html  index.html
webapp/templates/common/: base.html  bootstrap.html  cookie_notice.html
webapp/templates/errors/: index.html
webapp/templates/home/: footer.html  header.html  index.html  watson_assistant.html
webapp/templates/privacy/: index.html
webapp/templates/tac/: index.html
(+61 files in other folders)
