[tool.poetry]
name = "webapp"
version = "2.1.1021"
description = "Interactive virtual CV"
license = "Apache"
authors = ["Ismael Lugo <ismael.lugo@deloe.net>"]
readme = 'README.md'
repository = "https://github.com/deloe-net/ismael-cv"
homepage = "https://github.com/deloe-net/ismael-cv"

[tool.poetry.dependencies]
python = "~3.8"
Flask = "^2.0.2"
Flask-WTF = "^0.15.1"
Flask-Babel = "^2.0.0"
Babel = "^2.9.1"
peewee = "^3.14.4"
requests = "^2.26.0"
WTForms = "^2.3.3"
PyJWT = "^2.3.0"
humanfriendly = "^10.0"
qrcode = "^7.3.1"
Pillow = "^8.4.0"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
mock = "^4.0.3"
flake8 = "^4.0.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
webapp = 'webapp.cli:main'
